# crunchy

./: .gitignore  README.md  pyproject.toml  setup.py
1dcracks/: 1d_parameters.yaml  film_kick.py  film_rnd_perturbation.py  film_stability.py  parameters.yaml  parametric_random.py  umut_validation_at2.py
2dcracks/: disk_with_holes.py
brazilian/: brazilian.py  brazilian_corners_plates.py  brazilian_plates.py
couette/: couette.py
crunchy/: core.py  dolfinx_integration.py  filters.py  mesh.py  plots.py  utils.py  visualisation.py
crunchy/1dcracks/: 1d-film-stability.py  1d-film-varyingthickness.py
crunchy/2dcracks/: 2d-disk-gaussian.py  2d-disk-stability.py  2d-disk-variable-thickness.py
crunchy/examples/: example_crunchy.py  interpolate.py  interpolate_disk.py
crunchy/tests/: test_discwithholes.py  tests_core.py
fibermatrix/: fibermatrix.py  parameters.yaml
ice-cracks/: interpolate.ipynb  interpolate.py
numerical_experiments/: experiments.py  setup.py  utils.py
numerical_experiments/examples/: example_experiment.py
scripts/1dcracks/: film_kick.py  film_rnd_perturbation.py  parametric_random.py  parametric_stiffness.py  umut_validation_at2.py
scripts/2dcracks/: 2d-disk-stability.py  2d-disk-variable-thickness.py  disk_loop_stress.py  disk_varythickness.py  disk_with_holes.py
scripts/brazilian/: brazilian.py  brazilian_plates.py  rectangle_corners.py
scripts/couette/: couette.py
scripts/elastica/: elastica.py
scripts/fibermatrix/: fibermatrix.py
simpleshear/: shear.py
test/: test_irrevolutions.py  tests_fiber.py
(+12 files in other folders)
